--- a/Main.html
+++ b/Main.html
@@ -17,14 +17,15 @@
 <h5>Заголовок 5 уровня</h5>
 <h6>Заголовок 6 уровня</h6>
 
-<p>L</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
+<p class="paragraph-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
+<p class="paragraph-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
+<p class="paragraph-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
+<p class="paragraph-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores deserunt esse in iusto magnam necessitatibus, officia qui quia quo repellendus voluptatibus. Debitis ex inventore necessitatibus tempora veritatis! Alias, voluptatum!</p>
 
 <div>
-<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
-<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
-<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at atque, ducimus, incidunt itaque labore maxime molestiae perspiciatis recusandae rem repudiandae, tenetur? Consectetur cum dolores fuga in nostrum praesentium?</span>
 </div>
 
 <ul>
